--- a/styles/style.css
+++ b/styles/style.css
@@ -1,35 +1,64 @@
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 body {
-    height: 95vh;
-    width: 95vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color:#282a36;
-    color: #fff;
-    font-family: 'Press Start 2P', cursive;
+	height: 95vh;
+	width: 95vw;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background-color: #282a36;
+	color: #fff;
+	font-family: "Press Start 2P", cursive;
 }
 
 canvas {
-    margin-bottom: 50px;
+	margin-bottom: 25px;
 }
 
 footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-    font-size: 15px;
-    margin-top: 25px;
-    margin-bottom: 15px;
-    font-family: 'Roboto', sans-serif;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	text-align: center;
+	font-size: 15px;
+	margin-top: 25px;
+	margin-bottom: 15px;
+	font-family: "Roboto", sans-serif;
 }
 
 footer a {
-    text-decoration: none;
-    color: #fff;
+	text-decoration: none;
+	color: #fff;
+}
+
+#page-end {
+	text-align: center;
+}
+
+table {
+	width: 100%;
+	border-top: 1px solid #444444;
+	border-collapse: collapse;
+}
+th,
+td {
+	border-bottom: 1px solid #444444;
+	border-left: 1px solid #444444;
+	padding: 10px;
+}
+th:first-child,
+td:first-child {
+	border-left: none;
+}
+
+button {
+	background-color: #444444;
+	color: #fff;
+	border: none;
+	padding: 10px;
+	font-size: 15px;
+	font-family: "Roboto", sans-serif;
 }
